force-app/main/default/objects/Audit_Criteria__c/Audit_Criteria__c.object-meta.xml
<CustomObject>
    <label>Audit Criteria</label>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>