force-app/main/default/objects/Audit_Criteria__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <label>Audit #</label>
    <referenceTo>BMX_Quality_Audit__c</referenceTo>
    <relationshipLabel>Audit Criteria</relationshipLabel>
    <relationshipName>Audit_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>