force-app/main/default/objects/Audit_Criteria__c/fields/Audit_Finding__c.field-meta.xml
<CustomField>
    <fullName>Audit_Finding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Finding #</label>
    <referenceTo>Audit_Finding__c</referenceTo>
    <relationshipLabel>Audit Criteria</relationshipLabel>
    <relationshipName>Audit_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>