force-app/main/default/objects/Audit_Criteria__c/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chapter</label>
    <referenceTo>Chapter__c</referenceTo>
    <relationshipLabel>Audit Criteria</relationshipLabel>
    <relationshipName>Audit_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>