force-app/main/default/objects/Audit_Criteria__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Topic</label>
    <referenceTo>Topic__c</referenceTo>
    <relationshipLabel>Audit Criteria</relationshipLabel>
    <relationshipName>Audit_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>